<resources>
    <string name="app_name">"Mobile Assignment "</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>

    <string name="lat">Latitude : </string>
    <string name="lon">Longitude : </string>

    <string name="addCityTitle">Add Location</string>
    <string name="addCityText">Choose the name of the new position</string>

    <string name="deleteLocationTitle">Delete location</string>
    <string name="deleteLocationText">Are you sure you want to delete this location ? </string>

    <string name="deleteAllLocationTitle">Delete All locations</string>
    <string name="deleteAllLocationText">Are you sure you want to delete all the saved locations ? </string>

    <string name="ok">Ok</string>
    <string name="none">None</string>
    <string name="cancel">Cancel</string>

    <string name="noConnexion">No internet connexion. Try again later.</string>

    <string name="reset">Reset</string>
    <string name="resetID">reset</string>
    <string name="showIcon">Show icon</string>
    <string name="showIconID">show_icon</string>
    <string name="fiveForecast">5 days Forecat</string>
    <string name="show5Forecasts">Show 5 days forecast</string>
    <string name="showForecastID">show_forecast</string>
    <string name="hourForecast">Hour Forecast</string>
    <string name="hourForecastTitle">Select the hour for the 5 day forecast</string>
    <string name="hourForecastID">hour_forecast</string>

    <string name="forecastExtra">FORECAST_EXTRA</string>
    <string name="forecastsExtra">FORECASTS_EXTRA</string>
    <string name="locationNameExtra">LOCATION_NAME_EXTRA</string>
    <string name="title_activity_add_location">Map</string>

    <string name="temp">%1$.2f°</string>
    <string name="maxTemp">Max: %1$.2f°</string>
    <string name="minTemp">Min: %1$.2f°</string>

    <string name="windDegree">Degree: %1$.2f</string>
    <string name="windSpeed">Speed: %1$.2f</string>

    <string name="humidity">Humidity: %1$.2f</string>
    <string name="rain">Rain: %1$.4f</string>
</resources>
