<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:title="@string/reset"
        android:key="@string/resetID"
        android:summary="Delete all the saved locations"/>

    <CheckBoxPreference
        android:title="@string/showIcon"
        android:key="@string/showIconID"
        android:summary="Download and show Icon for the forecast"
        android:defaultValue="true"/>

    <PreferenceCategory
        android:title="@string/fiveForecast"
        android:key="pref_five_days_forecast">
        <CheckBoxPreference
            android:title="@string/show5Forecasts"
            android:key="@string/showForecastID"
            android:summary="Display 5 days forecast for a location"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>