<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:backgroundTint="@color/semiTransparent"
    android:elevation="5dp"
    app:cardCornerRadius="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Jun 25"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />

        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/weatherMain"
            app:layout_constraintLeft_toRightOf="@+id/date"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/weatherMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rain"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <TextView
            android:id="@+id/weatherDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Broken clouds"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/weatherMain"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="42sp"
            app:layout_constraintTop_toTopOf="@+id/weatherMain"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/weatherDescription"
            android:layout_marginBottom="0dp"
            app:layout_constraintLeft_toRightOf="@+id/weatherMain"
            android:layout_marginLeft="24dp" />

        <TextView
            android:id="@+id/maxTemperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAlignment="center"
            android:text="@string/maxTemp"
            app:layout_constraintTop_toTopOf="@+id/temperature"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toRightOf="@+id/temperature"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/minTemperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAlignment="center"
            android:text="@string/minTemp"
            app:layout_constraintLeft_toRightOf="@+id/temperature"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/temperature"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/windDegree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/windDegree"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@+id/wind"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toTopOf="@+id/wind"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/windSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/windSpeed"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@+id/wind"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/wind"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/humidity"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/humidityIcon"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toRightOf="@+id/humidityIcon"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/rain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/rain"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/humidityIcon"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/humidityIcon"
            android:layout_marginBottom="-1dp" />

        <ImageView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/wind"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/weatherDescription" />

        <ImageView
            android:id="@+id/humidityIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/wind"
            app:layout_constraintTop_toTopOf="@+id/wind"
            app:srcCompat="@drawable/humidity"
            app:layout_constraintLeft_toRightOf="@+id/windDegree"
            android:layout_marginLeft="8dp" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>