<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/animation_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- CONTENT -->

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/weatherIcon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:contentDescription="weatherIcon"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/windIcon"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/weatherMain"
                app:layout_constraintTop_toBottomOf="@+id/date"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="June 25"
                android:textSize="32sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="24dp" />

            <TextView
                android:id="@+id/weatherMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rain"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_marginTop="7dp"
                app:layout_constraintTop_toBottomOf="@+id/date"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="@+id/windDegree"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/weatherDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Broken clouds"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/weatherMain"
                app:layout_constraintLeft_toLeftOf="@+id/weatherMain" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="42sp"
                app:layout_constraintTop_toTopOf="@+id/date"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/date"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/maxTemperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAlignment="center"
                android:text="@string/maxTemp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temperature"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="@+id/temperature"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/minTemperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAlignment="center"
                android:text="@string/minTemp"
                app:layout_constraintLeft_toLeftOf="@+id/maxTemperature"
                app:layout_constraintRight_toRightOf="@+id/maxTemperature"
                app:layout_constraintTop_toBottomOf="@+id/maxTemperature"
                app:layout_constraintHorizontal_bias="0.254" />

            <TextView
                android:id="@+id/cityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="23dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="New York"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="35sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:id="@+id/windIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:scaleType="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:srcCompat="@drawable/wind"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/weatherDescription"
                android:layout_marginStart="24dp" />

            <TextView
                android:id="@+id/windDegree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/windDegree"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="@+id/windIcon"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toRightOf="@+id/windIcon"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/windSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/windSpeed"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/windIcon"
                android:layout_marginBottom="8dp"
                app:layout_constraintLeft_toRightOf="@+id/windIcon"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/humidity"
                app:layout_constraintBottom_toBottomOf="@+id/windIcon"
                app:layout_constraintTop_toTopOf="@+id/windIcon"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/windDegree"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/humidity"
                app:layout_constraintLeft_toRightOf="@+id/imageView2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/rain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rain"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@+id/imageView2"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/locationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="Home"
                app:layout_constraintBottom_toTopOf="@+id/cityName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/windIcon"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/locationName"
                android:layout_marginLeft="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="0dp"
                app:layout_constraintRight_toRightOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <include layout="@layout/navigation_view"/>

    </android.support.v4.widget.DrawerLayout>

    <include layout="@layout/app_bar" />

</android.support.design.widget.CoordinatorLayout>